# kairos

./: manage.py  pyproject.toml
events/: admin.py  forms.py  models.py  urls.py  views.py
events/migrations/: 0001_initial.py  0002_event.py  0003_rename_descrption_event_description.py  0004_rename_publish_event_published_event_periodicity_and_more.py  0005_event_capacity.py  0006_alter_event_capacity.py  0007_ticket_user.py  0008_alter_ticket_used.py  0009_event_capacity_actual.py  0010_event_capacity_updated.py  0011_alter_event_capacity_actual.py  0012_event_city_event_country.py  0013_event_event_time_alter_event_event_date.py
events/templatetags/: forms.py
kairos/: settings.py  urls.py
templates/: base.html  footer.html  navbar.html  pagination.html
templates/events/: attend.html  city_options.html  create.html  delete.html  detail.html  landing.html  list.html  public_list.html  ticket_detail.html  ticket_list.html  update.html
templates/registration/: login.html  logout.html  signup.html
